Attachment does not update after markup. https://bugs.webkit.org/show_bug.cgi?id=234266

Reviewed by Wenson Hsieh.

If we don't call the deligate to inform Mail about the new attachment data,
it will not update and the original image will be sent.

* UIProcess/mac/WKSharingServicePickerDelegate.mm:
(-[WKSharingServicePickerDelegate sharingService:didShareItems:]):



Canonical link: https://commits.webkit.org/245234@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287034 268f45cc-cd09-0410-ab3c-d52691b4dbfc